volume associated with that interval is considered "positive"  or "negative" respectively and the minority is considered "negative" or "positive" respectively

2/10/18
Made it so that neither buybin nor sellbin can be called if either the current crypto or the past one are nothing

2/11/18
Changed getBinancePrice to use the price api call instead of all prices so it no longer needs to iterate until it finds the coin just gets the specific coins most recent price.
Made synctatic fixes to auto trader
Fixed bug where auto trader was not printing the endprice when checking intervals
Added volume scaling by price for the update crypto in auto trader
Made a CryptoStatAnalysis class that is an object that stores decisions made by the trading bots and evaluates them and prints the results
Removed the file writing from CryptoEvaluator
Added special import to AutoTrader and an instance of the CrptoStatAnalysis class
Added initialization variables for the CryptoStatAnalyis class that hold score, mean percent price change, and different choice data
Added another class in CryptoStatAnalysis that holds different stats for each crypto
Got CryptoEvaluator to be API independent

Crypto Trainer no longer randomizes all params.

2/12/18
AutoTradeer now has a CryptoStatsAnalysis object initialized when it begins

2/13/18
Added a check for max Value being 0 to crypto evaluator and auto trader to try to fix the division by 0 bug

2/14/18
Added additional checks in crypto evaluator for passing a blank string to getbinanceprice that should help with key error issues
Added new modified volume calculation that uses the size of the percent to parition the volume for summation
Added checks in modififed volume calculation that in receives volumes that would result in a zero sum, it will just halve the smaller amount

2/16/18
Added some small fixes to make cryptoTrainer run multiple "classes" of evolution not just multiple variations of the bot 