@@ -5,21 +5,16 @@
 #todo update the best parameters text file
 #todo make the randomize parameters function implement the different types of randomization
 #todo make it so that every test having extremely negative output does not still overwrite best parameters
+#todo add in on/off switches and make them do different things for different parameters (i.e. something like negative weight should get treated like a 1.0 not a 0.0 since it is used in necessary calculations)
+#todo add in different negative weights depending on which is used.
+#todo add command line functionality so that you can input num_classes and num_iterations manually when running from command line
 
 import sys
 import random
-import requests
-import hmac
-import hashlib
 import time
-import math
-import datetime
-import re
 import os
-from subprocess import Popen, PIPE, run
+from subprocess import Popen, PIPE
 from PrivateData import api_key, secret_key
-
-#weird errors removed
 
 # EXPLANATION OF THE PARAMETERS
 
@@ -73,10 +68,10 @@ PARAM_CHOSEN = {}
 PARAMETER_VARIATIONS=[]
 
 #number of iterations of bot
-NUM_ITERATIONS = 50
+NUM_ITERATIONS = 100
 
 #number of classes of bots to run
-NUM_CLASSES = 5
+NUM_CLASSES = 10
 
 
 #final dictionary returned to be rewritten to file
@@ -201,6 +196,33 @@ def stringToDict(stringToChange):
 
     return newDict
 
+#if there is input on the command line it will assign the NUM_CLASSES and NUM_ITERATIONS based on the flags passed
+# the flag -cl5 will set the classes to 5. the flag -it6 will set the iterations to 6
+def setVals():
+
+    global NUM_CLASSES
+    global NUM_ITERATIONS
+
+    argv_len = len(sys.argv)
+    stringargs = str(sys.argv)
+    stringarglist = stringargs.split()
+
+    #if there is more than one arguement (the py file name) than it will loop for the flags in the string
+    # of arguments passed, then it splits the string up based on the flags if found
+    # flags must be seperated by whitespaces
+    if argv_len > 1:
+        if '-c1' in stringargs:
+            for i in stringarglist:
+                if '-cl' in i:
+                    NUM_CLASSES = int(i.split('-c1', 1)[1])
+        if '-it' in stringargs:
+            for j in stringarglist:
+                if '-it' in j:
+                    NUM_ITERATIONS = int(j.split('-it', 1)[1])
+
+
+
+
 #makes the string line exclusively consist of the correct string of parameters
 def reformatLine(line):
 
@@ -218,20 +240,24 @@ def main():
     global final_Dict
     global reform
 
-
-
+    #untested function that should check if there are command line arguments
+    #setVals()
 
     #store the multiple processes
-
-
     for i in range(NUM_CLASSES):
         typeOfRandom = 3
         current_Max = 0.0
         procs = []
         count = 0
 
+
+        #if this is the second class you need to reopen the file because it has been closed to commit the changes of the first class
+        if i > 0:
+            paramCompletePath = os.path.join(paramPaths, "TEST_PARAMETERS.txt")
+            file = open(paramCompletePath, "r+")
+
         #creates NUM_ITERATIONS amounts of bots
-        for i in range(NUM_ITERATIONS):
+        for j in range(NUM_ITERATIONS):
 
 
             proc = Popen([sys.executable, 'CryptoEvaluator.py', '{}in.txt'.format(i), '{}out.txt'.format(i)], stdout=PIPE, stdin = PIPE, stderr=PIPE, bufsize=1, universal_newlines=True)
@@ -297,10 +323,11 @@ def main():
 
         #rewrite the parameter file with the final Dict
         reWriteParameters(final_Dict)
-        for i in procs:
-            i.wait()
+        for z in procs:
+            z.wait()
+
+        file.close()
 
 
-    file.close()
 if __name__ == "__main__":
     main()
