@@ -1,3 +1,6 @@
+#series of parameters that yielded interesting results
+
+#1
 'PERCENT_QUANTITY_TO_SPEND': 0.9,
 'PERCENT_TO_SPEND': 1.0,
 'MINIMUM_PERCENT_INCREASE': 5.06793104537773,
@@ -46,4 +49,29 @@
 'CUMULATIVE_PRICE_MODIFIER': 0.8143161281658136,
 'PRIMARY_MODIFIED_VOLUME_SCALER': 0.8576937450227171,
 'WAIT_FOR_CHECK_FAILURE': 5.0,
-'WAIT_FOR_CHECK_TOO_LOW': 10.0,,
+'WAIT_FOR_CHECK_TOO_LOW': 10.0,
+
+#3
+'PERCENT_QUANTITY_TO_SPEND': 0.9,
+'PERCENT_TO_SPEND': 1.0,
+'MINIMUM_PERCENT_INCREASE': 5.172327805263027,
+'MINIMUM_SCORE': -0.0873785302132164,
+'MINIMUM_MOVING_AVERAGE': -1.4765204107877072,
+'MAX_DECREASE': -9.165693808534687,
+'MAX_TIME_CYCLE': 60.0,
+'MAX_CYCLES': 24.0,
+'MAX_PERCENT_CHANGE': 15.22639861434687,
+'NEGATIVE_WEIGHT': 0.2443891726933085,
+'CUMULATIVE_PERCENT_CHANGE': 6.726726726726723,
+'CUMULATIVE_PERCENT_CHANGE_STORE': 7.091772399904968,
+'SLOT_WEIGHT': 2.0983421330396927,
+'TIME_INCREASING_MODIFIER': 1.6610571234459173,
+'VOLUME_INCREASING_MODIFIER': 1.8237802580158657,
+'PERCENT_BY_HOUR_MODIFIER': 2.0976530297613802,
+'VOLUME_PERCENT_BY_HOUR_MODIFIER': 0.5191003404537604,
+'FLOOR_PRICE_MODIFIER': 0.8953515858214518,
+'MODIFIED_VOLUME_MODIFIER': 1.072642023646365,
+'CUMULATIVE_PRICE_MODIFIER': -0.027593709626584584,
+'PRIMARY_MODIFIED_VOLUME_SCALER': 0.13392004076714192,
+'WAIT_FOR_CHECK_FAILURE': 5.0,
+'WAIT_FOR_CHECK_TOO_LOW': 10.0,
