@@ -1,23 +1,23 @@
 'PERCENT_QUANTITY_TO_SPEND': 0.9,
 'PERCENT_TO_SPEND': 1.0,
-'MINIMUM_PERCENT_INCREASE': 5.172327805263027,
-'MINIMUM_SCORE': -0.0873785302132164,
-'MINIMUM_MOVING_AVERAGE': -1.4765204107877072,
-'MAX_DECREASE': -9.165693808534687,
+'MINIMUM_PERCENT_INCREASE': 5.06793104537773,
+'MINIMUM_SCORE': -0.4092337962361332,
+'MINIMUM_MOVING_AVERAGE': -0.5266996392485715,
+'MAX_DECREASE': -10.016241110167238,
 'MAX_TIME_CYCLE': 60.0,
 'MAX_CYCLES': 24.0,
-'MAX_PERCENT_CHANGE': 15.22639861434687,
-'NEGATIVE_WEIGHT': 0.2443891726933085,
-'CUMULATIVE_PERCENT_CHANGE': 6.726726726726723,
-'CUMULATIVE_PERCENT_CHANGE_STORE': 7.091772399904968,
-'SLOT_WEIGHT': 2.0983421330396927,
-'TIME_INCREASING_MODIFIER': 1.6610571234459173,
-'VOLUME_INCREASING_MODIFIER': 1.8237802580158657,
-'PERCENT_BY_HOUR_MODIFIER': 2.0976530297613802,
-'VOLUME_PERCENT_BY_HOUR_MODIFIER': 0.5191003404537604,
-'FLOOR_PRICE_MODIFIER': 0.8953515858214518,
-'MODIFIED_VOLUME_MODIFIER': 1.072642023646365,
-'CUMULATIVE_PRICE_MODIFIER': -0.027593709626584584,
-'PRIMARY_MODIFIED_VOLUME_SCALER': 0.13392004076714192,
+'MAX_PERCENT_CHANGE': 15.357831632479972,
+'NEGATIVE_WEIGHT': 1.5800503525734737,
+'CUMULATIVE_PERCENT_CHANGE': 0.8314898161568299,
+'CUMULATIVE_PERCENT_CHANGE_STORE': -3.4180700608160435,
+'SLOT_WEIGHT': 1.81707205208334,
+'TIME_INCREASING_MODIFIER': 1.226312121507372,
+'VOLUME_INCREASING_MODIFIER': 1.3502527881002075,
+'PERCENT_BY_HOUR_MODIFIER': 1.8640656721890545,
+'VOLUME_PERCENT_BY_HOUR_MODIFIER': 0.598274739088799,
+'FLOOR_PRICE_MODIFIER': 0.9872437395425651,
+'MODIFIED_VOLUME_MODIFIER': 1.3862799053714938,
+'CUMULATIVE_PRICE_MODIFIER': 0.6264690150648613,
+'PRIMARY_MODIFIED_VOLUME_SCALER': 1.3270954488437963,
 'WAIT_FOR_CHECK_FAILURE': 5.0,
-'WAIT_FOR_CHECK_TOO_LOW': 10.0,
+'WAIT_FOR_CHECK_TOO_LOW': 10.0
